Fix useless Java code