@@ -1,7 +1,6 @@
 import java.util.Arrays;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 class FibJava {
   public static void main(String[] _args) {
@@ -11,7 +10,6 @@ class FibJava {
     };
 
     run_all(runners);
-    // thread_all(runners);
 
     for (var runner : runners) {
       System.out.printf("Result %s: %d\n", runner.workerName, runner.get());
@@ -20,19 +18,21 @@ class FibJava {
     System.out.println("Program done. Exit.");
   }
 
-  static void run_all(FibRunnable... runners) {
+  static void run_all(FibRunnable[] runners) {
     final var executor = Executors.newVirtualThreadPerTaskExecutor();
     try (executor) {
-      var futures = Arrays.stream(runners)
+      Arrays.stream(runners)
           .map(runner -> executor.submit(runner))
-          .collect(Collectors.toList());
-
-      for (var future : futures) {
-        future.get();
-      }
-    } catch (InterruptedException | ExecutionException _getException) {
-      System.out.println("Workers interrupted");
-      System.exit(1);
+          .toList()
+          .forEach(future -> {
+            try {
+              future.get();
+            } catch (InterruptedException | ExecutionException _getException) {
+              System.out.println("Workers interrupted");
+              System.exit(1);
+            }
+          });
+      ;
     } // block call shutdown() on executor when finished
   }
 }
